--- a/rnaEditing/AEI_prionMainValidationKanataCohorts.ipynb
+++ b/rnaEditing/AEI_prionMainValidationKanataCohorts.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "# read AEI and extract sample ID\n",
-    "os.chdir(\"/Users/karlfrontzek/Documents/UCL/rna_editing/prion/\")\n",
+    "os.chdir(\"/sourceData/\")\n",
     "wpi4=pd.read_csv(\"AEI_peripheralOrgans_4wpi.csv\")\n",
     "#brain_aei['Sample']=brain_aei['Sample']+\"_Hp\" # add _Hp in sample ID"
    ]
@@ -198,7 +198,7 @@
    "outputs": [],
    "source": [
     "# read AEI and extract sample ID\n",
-    "os.chdir(\"/Users/karlfrontzek/Documents/UCL/rna_editing/prion/\")\n",
+    "os.chdir(\"/sourceData/\")\n",
     "wpi8=pd.read_csv(\"AEI_peripheralOrgans_8wpi.csv\")\n",
     "#brain_aei['Sample']=brain_aei['Sample']+\"_Hp\" # add _Hp in sample ID"
    ]
@@ -236,7 +236,7 @@
    "outputs": [],
    "source": [
     "# read AEI and extract sample ID\n",
-    "os.chdir(\"/Users/karlfrontzek/Documents/UCL/rna_editing/prion/\")\n",
+    "os.chdir(\"/sourceData/\")\n",
     "wpi1216=pd.read_csv(\"AEI_peripheralOrgans_12-16wpi.csv\")\n",
     "#brain_aei['Sample']=brain_aei['Sample']+\"_Hp\" # add _Hp in sample ID"
    ]
@@ -274,7 +274,7 @@
    "outputs": [],
    "source": [
     "# read AEI and extract sample ID\n",
-    "os.chdir(\"/Users/karlfrontzek/Documents/UCL/rna_editing/prion/\")\n",
+    "os.chdir(\"/sourceData/\")\n",
     "wpi18term=pd.read_csv(\"AEI_peripheralOrgans_18-term.csv\")\n",
     "#brain_aei['Sample']=brain_aei['Sample']+\"_Hp\" # add _Hp in sample ID"
    ]
