--- a/rnaEditing/kanataRediKnown.ipynb
+++ b/rnaEditing/kanataRediKnown.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "# get files from folder\n",
-    "kanataFolder=\"/Users/karlfrontzek/Documents/UCL/rna_editing/prion/kanataRediKnown\"\n",
+    "kanataFolder=\"./kanataRediKnown/\"\n",
     "os.chdir(kanataFolder)\n",
     "onlyfiles = [f for f in os.listdir(kanataFolder) if os.path.isfile(os.path.join(kanataFolder, f))]"
    ]
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "# read and clean up metadata\n",
-    "os.chdir('/Users/karlfrontzek/Documents/UCL/rna_editing/prion/')\n",
+    "os.chdir('./sourceData/')\n",
     "kanataMeta=pd.read_csv(\"kanataMeta.csv\") # read kanata metadata\n",
     "kanataMet=pd.DataFrame({'SRR': [],'Treatment': []}) # add SRR and treatment ids\n",
     "kanataMeta.columns=['in']\n",
@@ -739,22 +739,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfSuppl=df_raw.loc[~df_raw['wpiPosition'].isin(excludeSites)] # export editing sites for supplementary table\n",
-    "dfSuppl.to_csv(\"zerrSupplementaryRaw.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "# analyse statistical testing with Redit, see R\n",
-    "dfP=pd.read_csv('/Users/karlfrontzek/Documents/UCL/rna_editing/prion/kanataEditingSitesRedit.csv')"
+    "dfP=pd.read_csv('./sourceData/kanataEditingSitesRedit.csv')"
    ]
   },
   {
