Update and rename readme.txt to README

--- a/differentialGeneExpression/README
+++ b/differentialGeneExpression/README
@@ -1,3 +1,6 @@
+Analysis of Differential Gene Expression
+========================================
+
 Differentially expressed genes of extra-neural organs and brain from this and our previous publication https://doi.org/10.1371/journal.ppat.1008653, respectively, can be browsed freely via: XXXXXX.
 
 Assessing differential gene expression was described previously here https://doi.org/10.1371/journal.ppat.1008653:
